# lattis

./: CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build.yml  python-publish.yml
cmake/: build_rust_ffi_if_needed.cmake  install_ensure_rust_ffi.cmake.in  lattis.pc.in  lattisConfig.cmake.in
cxx/example/: CMakeLists.txt  construct1.cpp  construct2.cpp  construct3.cpp  construct4.cpp  construct_xml.cpp  ising.cpp
cxx/lattis/: basis.hpp  basis_xml.hpp  coloring.hpp  coordinate.hpp  extent.hpp  graph.hpp  graph_xml.hpp  offset.hpp  rust_xml.hpp  rust_xml_ffi.h  rust_xml_graph.hpp  rust_xml_unitcell.hpp  supercell.hpp  types.hpp  unitcell.hpp  unitcell_xml.hpp
cxx/test/: CMakeLists.txt  basis.cpp  basis_xml.cpp  coloring.cpp  extent.cpp  graph.cpp  graph_xml.cpp  rust_xml_bridge.cpp  supercell.cpp  unitcell.cpp  unitcell_xml.cpp
docs/: crates.io.md  julia-bindings.md  pypi.md  spec.md
julia/Lattis.jl/: Project.toml
julia/Lattis.jl/src/: Lattis.jl  wrap_ffi.jl
julia/Lattis.jl/test/: runtests.jl
python/examples/: construct.py
python/tests/: test_bindings.py
rust/lattis/: Cargo.toml
rust/lattis-ffi/: Cargo.toml
rust/lattis-ffi/src/: lib.rs
rust/lattis-ffi/tests/: last_error.rs
rust/lattis-python/: Cargo.toml
rust/lattis-python/src/: lib.rs
rust/lattis/examples/: construct1.rs  construct2.rs  construct3.rs  construct4.rs  construct_xml.rs  ising.rs
rust/lattis/examples/support/: mod.rs
rust/lattis/src/: basis.rs  graph.rs  lib.rs  types.rs  unitcell.rs  xml.rs
rust/lattis/tests/: core.rs  xml.rs
