[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "lattis"
dynamic = ["version"]
description = "A simple lattice/graph library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
]
license = "Apache-2.0"
license-files = ["LICENSE-2.0.txt"]
authors = [
  { name = "Synge Todo" },
]
keywords = ["lattice", "graph", "physics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/todo-group/lattis"
Documentation = "https://github.com/todo-group/lattis/blob/main/docs/pypi.md"
Repository = "https://github.com/todo-group/lattis"
Issues = "https://github.com/todo-group/lattis/issues"

[tool.maturin]
manifest-path = "rust/lattis-python/Cargo.toml"
module-name = "lattis"
bindings = "pyo3"
include = [
  { path = "README.md", format = "sdist" },
  { path = "docs/**/*.md", format = "sdist" },
  { path = "python/tests/**/*.py", format = "sdist" },
]
